<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <ImageButton
        android:id="@+id/btnback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="24dp"
        android:background="@drawable/oval_style"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtlets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/let"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/btnback"
        app:layout_constraintTop_toBottomOf="@id/btnback" />

    <TextView
        android:id="@+id/description"
        android:layout_width="229dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:lineSpacingExtra="6sp"
        android:text="@string/description"
        android:textAppearance="@style/description"
        android:translationY="-2.96sp"
        app:layout_constraintStart_toStartOf="@id/txtlets"
        app:layout_constraintTop_toBottomOf="@id/txtlets" />

    <EditText
        android:id="@+id/edit_1"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/form_text_style"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <EditText
        android:id="@+id/edit_2"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/form_text_style"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_1" />

    <TextView
        android:id="@+id/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="right|top"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="6sp"
        android:text="@string/showpassword"
        android:textColor="#252B5C"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_style"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_password" />
</androidx.constraintlayout.widget.ConstraintLayout>