<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity3">
    <ImageButton
        android:id="@+id/btnback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="24dp"
        android:background="@drawable/oval_style"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:gravity="center_horizontal|top"
        android:text="@string/page_title"
        android:textAppearance="@style/page_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/image_style"
        android:src="@drawable/hhape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile"
        />
    <EditText
        android:id="@+id/edit_1"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_text_style"
        android:drawableEnd="@drawable/ic_menu_button_profile"
        android:paddingEnd="12dp"
        android:text="@string/jonathan"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view" />
    <EditText
        android:id="@+id/edit_2"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_text_style"
        android:drawableEnd="@drawable/ic_baseline_call_24"
        android:paddingEnd="12dp"
        android:text="@string/number"
        android:inputType="phone"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_1" />
    <EditText
        android:id="@+id/edit_3"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_text_style"
        android:drawableEnd="@drawable/ic_email_2"
        android:paddingEnd="12dp"
        android:text="@string/jonatan_gmail"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_2" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_button"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_style"
        android:text="@string/chooselocation"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>